# IHABOT2

./: README.md  test.txt
Robot_Simulation/: CMakeLists.txt  default.rviz  package.xml
Robot_Simulation/launch/: amcl.launch  controller.launch  controller.yaml  display.launch  gazebo.launch  gmapping.launch  move_base.launch  robot.launch
Robot_Simulation/map/: map.pgm
Robot_Simulation/meshes/: backward_left_wheel_v1_1.stl  backward_right_wheel_v1_1.stl  base_link.stl  forward_left_wheel_v1_1.stl  forward_right_wheel_v1_1.stl
Robot_Simulation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
Robot_Simulation/urdf/: materials.xacro  test_urdf.gazebo  (+2 more)
firmware/: motor_driver_setup.txt
robot_bringup/: CMakeLists.txt  final_test_rviz.rviz  frames.gv  package.xml  test.rviz
robot_bringup/config/: odom_encoder_params.yaml  robot_localization_ekf.yaml
robot_bringup/filters/: box_filter.yaml
robot_bringup/interface/: index.html
robot_bringup/launch/: amcl.launch  connection.launch  fuse.launch  fusion_ekf.launch  gmapping.launch  imu.launch  run_robot.launch  teb_planner.launch  workStation.launch
robot_bringup/map/: 24_sept_lab_map.pgm  24_sept_lab_map.yaml  new_lab_high.pgm  new_lab_high.yaml  new_updated_map2.pgm  new_updated_map2.yaml  two_room_map.yaml
robot_bringup/mecanum/: costmap_common_params.yaml  costmap_common_params_new.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
robot_bringup/src/: cmd_vel_mux.cpp  odometry.cpp  odometry_tf.cpp  receive_goal_interface.py  send_goal.py  send_goal_action.py
(+4 files in other folders)
